<resources>
    <string name="app_name">识别发票</string>
    <string name="storage_path">Android/data/edu.bupt.ticketextraction/files/Pictures</string>
    <string name="fragment_bill">发票</string>
    <string name="fragment_export">导出</string>
    <string name="camera_btn">相机</string>
    <string name="fragment_instruction">教程</string>
    <string name="fragment_setting">设置</string>
    <string name="login_account">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="setting_jump_to_login_name">账号管理</string>
    <string name="send_to_email">发送到邮箱</string>
    <string name="send_email_address">请输入邮箱</string>
    <string name="send">发送</string>
    <string name="clear_cache">清空缓存</string>
    <string name="about_us">关于我们</string>
    <string name="activity_top">顶部栏</string>
    <string name="version">当前版本</string>
    <string name="team_introduction">团队介绍</string>
    <string name="visit_web">访问网页端</string>
    <string name="introduction1">本APP为北京邮电大学大学生创新训练项目。</string>
    <string name="introduction2">APP开发: 武连增 肖皓月</string>
    <string name="introduction3">web开发: 杨灿</string>
    <string name="introduction4">后端API: 伍昶旭</string>
    <string name="create_wallet_hint">请输入钱包名称</string>
    <string name="create_btn">创建</string>
    <string name="default_wallet">默认</string>
    <string name="new_wallet">新建钱包</string>
    <string name="shoot">拍照</string>
    <string name="record">录制</string>
    <string name="input_new_name">请输入新名称</string>
    <string name="action_instruction">使用说明</string>
    <string name="register_button">注册新账号</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="re_input_password">请重复输入密码</string>
    <string name="register_phone_number">手机号</string>
    <string name="register_password">密码</string>
    <string name="distance">&#160;&#160;里程:</string>
    <string name="total_price">&#160;&#160;总价:</string>
    <string name="unit_price">&#160;&#160;单价:</string>
    <string name="date">&#160;&#160;日期:</string>
    <string name="find_password">找回密码</string>
    <string name="next_step">下一步</string>
    <string name="verification_code">验证码</string>
    <string name="input_verification">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="my_contacts">我的联系人</string>
    <string name="change_password">修改密码</string>
    <string name="change_account">切换账号</string>
    <string name="logoff">注销</string>
    <string name="exit">退出</string>
    <string name="add_contact">新增联系人</string>
    <string name="name">&#160;&#160;姓名:</string>
    <string name="email">&#160;&#160;邮箱:</string>
    <string name="change_contact_info">修改信息</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_email">请输入邮箱</string>
    <string name="check_btn">验&#160;&#160;&#160;&#160;真</string>
    <string name="ticket_code">&#160;&#160;发票代码:</string>
    <string name="ticket_number">&#160;&#160;发票号码:</string>
    <string name="check_update">检查更新</string>
</resources>