<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="80dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/register_phone_number"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                style="@style/login_edit_text_style"
                android:layout_height="70dp"
                android:id="@+id/retrieve_account"
                android:autofillHints="@string/input_phone_number"
                android:inputType="number"
                android:hint="@string/input_phone_number"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/verification_code"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                style="@style/login_edit_text_style"
                android:layout_height="70dp"
                android:id="@+id/retrieve_verification"
                android:autofillHints="@string/input_verification"
                android:inputType="number"
                android:hint="@string/input_verification"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"/>

        <Button
                android:id="@+id/get_verification_button"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:text="@string/get_verification_code"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
            style="@style/normal_button_style"
            android:id="@+id/next_step_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/next_step"
            android:textColor="@android:color/holo_purple"
            android:layout_marginTop="40dp"
            android:textSize="22sp"/>

</LinearLayout>