<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/setting_button_bkg">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/version"
                android:textSize="20sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textColor="@color/black"/>

        <TextView
                android:id="@+id/version_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textColor="@color/version_gray"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                tools:ignore="RelativeOverlap"/>

    </RelativeLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_button_bkg"
            android:text="@string/version"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

    </Button>

    <Button
            style="@style/setting_button_style"
            android:id="@+id/team_btn"
            android:text="@string/team_introduction"/>

    <Button
            style="@style/setting_button_style"
            android:id="@+id/website_btn"
            android:text="@string/visit_web"/>

</LinearLayout>