<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="80dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/register_password"
                android:gravity="center_vertical"
                android:textSize="22sp"
                android:textStyle="bold"/>

        <EditText
                style="@style/login_edit_text_style"
                android:layout_height="70dp"
                android:id="@+id/retrieve_password"
                android:autofillHints="@string/login_password"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="22sp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"/>

    </RelativeLayout>

    <TextView
            style="@style/warning_text_view"
            android:id="@+id/password_warning"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/register_password"
                android:gravity="center_vertical"
                android:textSize="22sp"
                android:textStyle="bold"/>

        <EditText
                style="@style/login_edit_text_style"
                android:layout_height="70dp"
                android:id="@+id/retrieve_re_password"
                android:autofillHints="@string/re_input_password"
                android:inputType="textPassword"
                android:hint="@string/re_input_password"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="22sp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"/>

    </RelativeLayout>

    <TextView
            style="@style/warning_text_view"
            android:id="@+id/re_password_warning"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    <Button
            style="@style/normal_button_style"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/reset_password_button"
            android:text="@string/reset_password"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

</LinearLayout>